--- a/bower.json
+++ b/bower.json
@@ -20,9 +20,8 @@
     "material-design-icons": "~2.0.0",
     "angular-resource": "~1.4.8",
     "angular-cookies": "~1.4.8",
-    "angular-touch": "~1.4.8",
     "angular-sanitize": "~1.4.8",
     "angular-ui-router": "ui-router#~0.2.15",
-    "angular-md-pull-to-refresh": "infomofo/angular-md-pull-to-refresh"
+    "material-refresh": "~0.1.0"
   }
 }
