--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "ipList",
-  "description": "IP address list manager",
+  "description": "IP List Manager",
   "private": true,
-  "version": "0.0.1",
+  "version": "1.0.0",
   "homepage": "",
   "license": "MIT",
   "ignore": [
@@ -16,7 +16,7 @@
     "angular": "~1.4.8",
     "angular-animate": "^1.4.8",
     "angular-aria": "^1.4.8",
-    "angular-material": "master",
+    "angular-material": "~1.0.0",
     "material-design-icons": "~2.0.0",
     "angular-resource": "~1.4.8",
     "angular-cookies": "~1.4.8",
